test-suite/tests/ui/designated/duplicate_attribute.stderr
error: parameter is already designated
 --> tests/ui/designated/duplicate_attribute.rs:4:27
  |
4 | pub struct Test<#[stated] #[stated] S>;
  |                           ^^^^^^^^^

error: parameter is already designated
 --> tests/ui/designated/duplicate_attribute.rs:7:16
  |
7 | impl<#[stated] #[stated] S> Test<S> {}
  |                ^^^^^^^^^
